<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.xorg.gsapp.SettingsHeader
        android:title="@string/prefs_klasse_header"
        android:key="sec_klasse">
        <ListPreference
            android:key="pref_klasse"
            android:title="@string/prefs_klasse"
            android:summary="%s"
            android:icon="@drawable/class_icon"/>
    </de.xorg.gsapp.SettingsHeader>

    <de.xorg.gsapp.SettingsHeader
        android:title="@string/prefs_teacher_header"
        android:key="sec_lehrer">
        <EditTextPreference
            android:key="pref_teacher"
            android:title="@string/prefs_teacher"
            android:icon="@drawable/class_icon" />
    </de.xorg.gsapp.SettingsHeader>

    <de.xorg.gsapp.SettingsHeader
        android:title="@string/prefs_general"
        android:key="sec_general">

        <DropDownPreference
            android:key="pref_push"
            android:title="@string/prefs_pushmode"
            android:entries="@array/pushMode"
            android:entryValues="@array/pushModeState"
            android:summary="%s"
            android:icon="@drawable/notifications_icon"/>

        <DropDownPreference
            android:key="pref_theme"
            android:title="@string/prefs_theme"
            android:entries="@array/themes"
            android:entryValues="@array/themesState"
            android:summary="%s"
            android:icon="@drawable/themes_icon"/>

        <SwitchPreferenceCompat
            android:key="pref_marquee"
            android:title="@string/prefs_marquee"
            android:summary="@string/prefs_marquee_sum"
            android:icon="@drawable/marquee_icon" />

        <Preference
            android:key="pref_login"
            android:title="Automatische Anmeldung"
            android:summary="für Essenbestellung"
            android:icon="@drawable/food_fork_drink" />

        <!--<Preference
            android:key="preference"
            android:title="@string/title_basic_preference"
            android:summary="@string/summary_basic_preference"/>

        <Preference
            android:key="stylized"
            android:title="@string/title_stylish_preference"
            android:summary="@string/summary_stylish_preference"/>

        <Preference
            android:key="icon"
            android:title="@string/title_icon_preference"
            android:summary="@string/summary_icon_preference"
            android:icon="@android:drawable/ic_menu_camera"/>

        <Preference
            android:key="single_line_title"
            android:title="@string/title_single_line_title_preference"
            android:summary="@string/summary_single_line_title_preference"
            app:singleLineTitle="true"/>-->
    </de.xorg.gsapp.SettingsHeader>

    <de.xorg.gsapp.SettingsHeader
        android:title="Debug options"
        android:key="debug_prefs">
        <SwitchPreferenceCompat
            android:key="pref_popbs"
            android:title="Enable popping existing fragments"
            android:summary="in backstack"
            android:icon="@drawable/arrow_back" />

        <SeekBarPreference
            android:key="debugSrc"
            android:title="Vertretungsplan-Quelle"
            android:summary="0 is default"
            android:max="3"
            android:min="0"
            android:defaultValue="0"/>
    </de.xorg.gsapp.SettingsHeader>

    <!--<PreferenceCategory
        android:title="@string/widgets">

        <CheckBoxPreference
            android:key="checkbox"
            android:title="@string/title_checkbox_preference"
            android:summary="@string/summary_checkbox_preference"/>

        <SwitchPreferenceCompat
            android:key="switch"
            android:title="@string/title_switch_preference"
            android:summary="@string/summary_switch_preference"/>

        <DropDownPreference
            android:key="dropdown"
            android:title="@string/title_dropdown_preference"
            android:entries="@array/entries"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/entry_values"/>

        <SeekBarPreference
            android:key="seekbar"
            android:title="@string/title_seekbar_preference"
            android:summary="@string/summary_seekbar_preference"
            android:max="10"
            android:defaultValue="5"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dialogs">

        <EditTextPreference
            android:key="edittext"
            android:title="@string/title_edittext_preference"
            app:useSimpleSummaryProvider="true"
            android:dialogTitle="@string/dialog_title_edittext_preference"/>

        <ListPreference
            android:key="list"
            android:title="@string/title_list_preference"
            app:useSimpleSummaryProvider="true"
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:dialogTitle="@string/dialog_title_list_preference"/>

        <MultiSelectListPreference
            android:key="multi_select_list"
            android:title="@string/title_multi_list_preference"
            android:summary="@string/summary_multi_list_preference"
            android:entries="@array/entries"
            android:entryValues="@array/entry_values"
            android:dialogTitle="@string/dialog_title_multi_list_preference"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced"
        android:title="@string/advanced_attributes"
        app:initialExpandedChildrenCount="1">

        <Preference
            android:key="expandable"
            android:title="@string/title_expandable_preference"
            android:summary="@string/summary_expandable_preference"/>

        <Preference
            android:title="@string/title_intent_preference"
            android:summary="@string/summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.android.com"/>

        </Preference>

        <SwitchPreferenceCompat
            android:key="parent"
            android:title="@string/title_parent_preference"
            android:summary="@string/summary_parent_preference"/>

        <SwitchPreferenceCompat
            android:key="child"
            android:dependency="parent"
            android:title="@string/title_child_preference"
            android:summary="@string/summary_child_preference"/>

        <SwitchPreferenceCompat
            android:key="toggle_summary"
            android:title="@string/title_toggle_summary_preference"
            android:summaryOn="@string/summary_on_toggle_summary_preference"
            android:summaryOff="@string/summary_off_toggle_summary_preference"/>

        <Preference
            android:key="copyable"
            android:title="@string/title_copyable_preference"
            android:summary="@string/summary_copyable_preference"
            app:enableCopying="true"/>
    </PreferenceCategory>-->

</androidx.preference.PreferenceScreen>